// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render a large avatar 1`] = `
<Avatar
  color="blue"
  name="JS"
  size="large"
>
  <styled.div
    color="blue"
    size="large"
  >
    <div
      className="sc-AykKC kA-dXtV"
      color="blue"
      size="large"
    >
      <styled.div
        size="large"
      >
        <div
          className="sc-AykKD fvTGaU"
          size="large"
        >
          JS
        </div>
      </styled.div>
    </div>
  </styled.div>
</Avatar>
`;

exports[`Avatar should render a medium avatar 1`] = `
<Avatar
  color="green"
  name="JS"
  size="medium"
>
  <styled.div
    color="green"
    size="medium"
  >
    <div
      className="sc-AykKC eMLSiC"
      color="green"
      size="medium"
    >
      <styled.div
        size="medium"
      >
        <div
          className="sc-AykKD fzJCPo"
          size="medium"
        >
          JS
        </div>
      </styled.div>
    </div>
  </styled.div>
</Avatar>
`;

exports[`Avatar should render a orange avatar 1`] = `
<Avatar
  color="orange"
  name="JS"
  size="medium"
>
  <styled.div
    color="orange"
    size="medium"
  >
    <div
      className="sc-AykKC kjkDeA"
      color="orange"
      size="medium"
    >
      <styled.div
        size="medium"
      >
        <div
          className="sc-AykKD fzJCPo"
          size="medium"
        >
          JS
        </div>
      </styled.div>
    </div>
  </styled.div>
</Avatar>
`;

exports[`Avatar should render a purple avatar 1`] = `
<Avatar
  color="purple"
  name="JS"
  size="medium"
>
  <styled.div
    color="purple"
    size="medium"
  >
    <div
      className="sc-AykKC bMgnjD"
      color="purple"
      size="medium"
    >
      <styled.div
        size="medium"
      >
        <div
          className="sc-AykKD fzJCPo"
          size="medium"
        >
          JS
        </div>
      </styled.div>
    </div>
  </styled.div>
</Avatar>
`;

exports[`Avatar should render a small avatar 1`] = `
<Avatar
  color="red"
  name="JS"
  size="small"
>
  <styled.div
    color="red"
    size="small"
  >
    <div
      className="sc-AykKC BiPoB"
      color="red"
      size="small"
    >
      <styled.div
        size="small"
      >
        <div
          className="sc-AykKD iWWKhD"
          size="small"
        >
          JS
        </div>
      </styled.div>
    </div>
  </styled.div>
</Avatar>
`;
